Switched MessageComposer from pages to text rects